# doors-os

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  sources.list
.github/workflows/: ci.yml
Boot/: BootMain.cpp  BootModule.cpp  BootModule.h  BootModule.ixx  CMakeLists.txt  Preboot.cpp  Preboot.h  UEFI.cpp  UEFI.h  UEFI.ixx
BuildTool/: CMakeLists.txt  main.cpp
Kernel/: CMakeLists.txt
Kernel/Main/: KernelMain.cpp
Shared/: CMakeLists.txt
Shared/Include/: SkipRTC.h  Version.hpp
